updated ocpp registration v2
